--- a/ManyToOneProject/.classpath
+++ b/ManyToOneProject/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="src/lib/jboss-logging-3.3.1.Final.jar"/>
 	<classpathentry kind="lib" path="src/lib/jboss-transaction-api_1.2_spec-1.0.1.Final.jar"/>
 	<classpathentry kind="lib" path="src/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="src/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
